--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Doruk Kakici</span>
-                  <span>DevOps Engineer</span>
+                  <span>I'm Torbaci.</span>
                   <span>Fitness Enthusiast</span>
                 </span>
                 <span id="typed"></span>
