--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,13 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 1 262-729-3650
+                          + 1 321 454 23 67
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          kakici.doruk@gmail.com
+                          dorukdkka@gmail.com
                         </li>
                         <li>
                           <span class="fa-icon">
